--- a/package.json
+++ b/package.json
@@ -3,75 +3,79 @@
   "description": "",
   "version": "1.1.0",
   "author": "A. Karadzhov - aKaradzhov97",
+  "scripts": {
+    "start": "gatsby clean && gatsby develop",
+    "serve": "gatsby serve",
+    "build": "gatsby build",
+    "build:pp": "gatsby build --prefix-paths",
+    "lint:js": "eslint --ext .js,.jsx my-gatsby-project",
+    "lint:md": "remark content",
+    "format": "prettier '**/*.{js,jsx,ts,tsx,scss}' --write"
+  },
   "dependencies": {
-    "gatsby": "^2.22.15",
-    "gatsby-image": "^2.4.5",
-    "gatsby-plugin-catch-links": "^2.3.3",
-    "gatsby-plugin-feed": "^2.5.3",
-    "gatsby-plugin-google-analytics": "^2.3.2",
-    "gatsby-plugin-lodash": "^3.3.2",
-    "gatsby-plugin-manifest": "^2.4.9",
-    "gatsby-plugin-netlify-cms": "^4.3.3",
-    "gatsby-plugin-nprogress": "^2.3.2",
-    "gatsby-plugin-offline": "^3.2.7",
-    "gatsby-plugin-react-helmet": "^3.3.2",
-    "gatsby-plugin-sharp": "^2.6.9",
-    "gatsby-plugin-sitemap": "^2.4.3",
-    "gatsby-plugin-twitter": "^2.3.2",
-    "gatsby-remark-autolink-headers": "^2.3.3",
-    "gatsby-remark-copy-linked-files": "^2.3.3",
-    "gatsby-remark-images": "^3.3.8",
-    "gatsby-remark-prismjs": "^3.5.2",
-    "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-remark-responsive-iframe": "^2.4.3",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-remark": "^2.8.13",
-    "gatsby-transformer-sharp": "^2.5.3",
-    "lodash": "^4.17.15",
-    "moment": "^2.26.0",
-    "netlify-cms-app": "^2.12.13",
-    "prismjs": "^1.21.0",
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
+    "@types/url-join": "^4.0.0",
+    "bootstrap": "^4.5.3",
+    "gatsby": "^2.24.76",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-catch-links": "^2.3.15",
+    "gatsby-plugin-feed": "^2.5.14",
+    "gatsby-plugin-google-analytics": "^2.3.18",
+    "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-lodash": "^3.3.13",
+    "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-netlify-cms": "^4.3.16",
+    "gatsby-plugin-nprogress": "^2.3.13",
+    "gatsby-plugin-offline": "^3.2.31",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sass": "^2.3.16",
+    "gatsby-plugin-sharp": "^2.6.42",
+    "gatsby-plugin-sitemap": "^2.4.16",
+    "gatsby-plugin-split-css": "^1.0.2",
+    "gatsby-remark-autolink-headers": "^2.3.15",
+    "gatsby-remark-copy-linked-files": "^2.3.19",
+    "gatsby-remark-images": "^3.3.33",
+    "gatsby-remark-prismjs": "^3.5.16",
+    "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-remark-responsive-iframe": "^2.4.17",
+    "gatsby-source-filesystem": "^2.3.34",
+    "gatsby-transformer-remark": "^2.8.38",
+    "gatsby-transformer-sharp": "^2.5.17",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "netlify-cms-app": "^2.12.27",
+    "node-sass": "^4.14.1",
+    "prismjs": "^1.22.0",
     "react": "^16.13.1",
-    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-share": "^4.1.0",
-    "react-twitter-widgets": "^1.9.5",
-    "url-join": "^4.0.0"
+    "react-helmet": "^6.1.0",
+    "typescript": "^4.0.3",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
-    "eslint": "^7.1.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.20.0",
-    "gh-pages": "^3.0.0",
-    "prettier": "^2.0.5",
-    "remark-cli": "^8.0.0",
-    "remark-preset-lint-recommended": "^4.0.0",
-    "stylelint": "^13.5.0",
-    "stylelint-config-prettier": "^8.0.1",
-    "stylelint-config-standard": "^20.0.0",
-    "write-good": "^1.0.1"
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.4",
+    "prettier": "^2.1.2",
+    "remark-cli": "^8.0.1",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
   "main": "n/a",
-  "scripts": {
-    "start": "gatsby clean && gatsby develop",
-    "serve": "gatsby serve",
-    "build": "gatsby build",
-    "build:pp": "gatsby build --prefix-paths",
-    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
-    "lint:js": "eslint --ext .js,.jsx my-gatsby-project",
-    "lint:md": "remark content",
-    "write-good": "write-good $(glob 'content/posts/**/*.md')",
-    "format": "prettier '**/*.{js,jsx,ts,tsx,scss}' --write"
-  },
   "remarkConfig": {
     "plugins": [
       "remark-preset-lint-recommended"
